# stepml

./: .gitignore  CLAUDE.md  Makefile  PLAYLIST_GUIDE.md  README.md  analyze_performance_data.py  example_ml_usage.py  example_scale_detection.py  example_usage.py  generate_calculated_ratings.py  generate_dataset.py  generate_playlists.py  ground_truth_ratings.yaml  main.py  pack_scales.yaml  pyproject.toml  pytest.ini  sync_favorites.py  test_parser.py  test_scale_detection_real.py  test_stats_parser.py  test_universal_parser.py  train_baseline_models.py
doc/: README.md  file_formats.md  implementation_notes.md  playlist_guide.md  project_status.md
examples/: example_ml_usage.py  example_multi_format.py  example_scale_detection.py  example_usage.py
features/: __init__.py  feature_extractor.py
models/: baseline_models.py
parsers/: __init__.py  dwi_parser.py  sm_parser.py  ssc_parser.py  universal_parser.py
scripts/: generate_baseline.py
spec/: DWI_PARSER_FIX.md  PERFORMANCE_ENRICHMENT_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  README.md  file_formats.md  implementation_notes.md  ml_step_chart_analysis.md  phase1.md  project_status.md  test_suite.md
src/stepml/: __init__.py  analyze_performance_data.py  config.py  generate_baseline.py  generate_calculated_ratings.py  generate_dataset.py  generate_playlists.py  sync_favorites.py  test_dwi_parser.py  test_parser.py  test_scale_detection_real.py  test_ssc_parser.py  train_baseline_models.py
src/stepml/features/: __init__.py  feature_extractor.py
src/stepml/models/: __init__.py  baseline_models.py
src/stepml/parsers/: __init__.py  dwi_parser.py  sm_parser.py  ssc_parser.py  stats_parser.py  universal_parser.py
src/stepml/scripts/: __init__.py  generate_baseline.py
src/stepml/utils/: __init__.py  (+6 more)
tests/: BASELINE_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  conftest.py  test_dwi_parser.py  test_features.py  test_multi_format.py  test_parser.py  test_scale_detection.py  test_solo_parsing.py
tests/fixtures/: baseline_features.json  test_charts.json
utils/: __init__.py  performance_enrichment.py  rating_normalizer.py  scale_detector.py
