[project]
name = "stepml"
version = "0.1.0"
description = "Machine learning-based step chart analysis and difficulty rating system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pytest>=8.0.0",
    "scikit-learn>=1.7.2",
]
